# solanaidle

./: .dockerignore  .env.production.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  magicblock-pitch.html  nginx.web.conf  package.json  pnpm-lock.yaml  seeker-node-pitch.html  vercel.json
.github/workflows/: deploy.yml
apps/api/: .env.example  package.json
apps/api/scripts/: delete-wallet.ts  reset-all-wallets.ts  reset-db.ts
apps/api/src/: index.ts
apps/mobile/: app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  polyfills.ts  tailwind.config.js  theme.ts  tsconfig.json
apps/mobile/app/: _layout.tsx  connect.tsx  index.tsx
apps/mobile/components/: class-icon.tsx  currency-bar.tsx  glass-panel.tsx  gradient-text.tsx  guidance-panel.tsx  screen-bg.tsx  toast-provider.tsx
apps/mobile/hooks/: use-boss-er.ts  use-boss.ts  use-challenges.ts  use-daily-login.ts  use-game-state.ts  use-guild.ts  use-inventory.ts  use-nfts.ts  use-perks.ts  use-raid.ts  use-vrf-roll.ts  use-wallet-sign.ts
apps/mobile/lib/: animations.ts  api.ts  er.ts  game-notifications.ts  skr.ts  theme.ts  utils.ts
apps/mobile/plugins/: fix-build-gradle.js
apps/mobile/providers/: auth-context.tsx  dev-tools.ts  wallet-cache.ts  wallet-provider.tsx
apps/mobile/theme/: colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
docs/: API.md  GAME_DESIGN.md  MAGICBLOCK.md  MAGICBLOCK_PITCH_BRIEF.md  MAGICBLOCK_VRF.md  METAPLEX.md  MONETIZATION_PLAN.md  ONCHAIN.md  PITCH_BRIEF.md  PROJECT_BRIEF.md  SETUP.md  SUBMISSION_VIDEO.md  TECH_STACK.md
docs/plans/: 1-monolith-hack-submit-plan.md  2-mainnet-production-plan.md  2026-02-09-cyberpunk-ui-overhaul.md  2026-02-09-mvp-implementation.md  2026-02-09-roguelike-implementation.md  2026-02-09-roguelike-viral-design.md  2026-02-09-stakes-and-narrative-impl.md  2026-02-09-stakes-and-narrative.md  2026-02-10-gamification-features.md  2026-02-10-gear-upgrades-design.md  2026-02-10-multi-track-gear.md  2026-02-11-economy-polish-design.md  2026-02-13-magicblock-vrf-integration.md  2026-02-14-ephemeral-rollups-integration.md  2026-02-14-jupiter-quests.md  2026-02-15-economy-narrative-redesign.md  2026-02-20-expo-mobile-design.md  2026-02-20-expo-mobile-implementation.md  2026-02-21-magicblock-fixes-design.md  2026-02-22-magicblock-bugfixes.md  2026-02-22-mobile-web-parity-design.md  2026-02-22-mobile-web-parity.md  2026-02-27-unified-solanaidle-program.md  3-dappstore-publish-plan.md  monolith-dappstore-mainnet-plan.md
docs/reference/: jupiter-api-reference.md  magicblock-vrf-quickstart.md
programs/boss-tracker/: Anchor.toml  Cargo.toml
programs/boss-tracker/src/: lib.rs
programs/progress-tracker/: Anchor.toml  Cargo.toml
programs/progress-tracker/src/: lib.rs
programs/solanaidle/: Cargo.toml
programs/solanaidle/src/: lib.rs
programs/solanaidle/src/instructions/: boss.rs  mod.rs  progress.rs  vrf.rs
programs/solanaidle/src/state/: boss_state.rs  mod.rs  player_progress.rs  vrf_result.rs
programs/vrf-roller/: Anchor.toml  Cargo.toml
programs/vrf-roller/src/: lib.rs
scripts/: create-mock-skr-devnet.sh  verify-er.ts
(+141 files in other folders)
