[package]
name = "boss-tracker"
version = "0.1.0"
description = "On-chain boss HP tracking via MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boss_tracker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.1", features = ["anchor"] }
