[package]
name = "solanaidle"
version = "0.1.0"
description = "Unified on-chain program for Solana Idle game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanaidle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.5", features = ["anchor", "disable-realloc"] }
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
