[package]
name = "vrf-roller"
version = "0.1.0"
description = "VRF randomness for Solana Idle game — powered by MagicBlock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_roller"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
